# sprecher

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  TODO.md  app.py  config.py  pyproject.toml
.claude/: settings.json
.claude/skills/: sprecher.md
api/: __init__.py  health.py  jobs.py  narrate.py  router.py  storage.py  stt.py  tts.py  voices.py
app/: __init__.py  lifespan.py  main.py
core/: __init__.py  engine_router.py
core/narrate/: assembler.py  chunker.py  parsers.py
core/stt/: __init__.py  whisper_engine.py
core/tts/: __init__.py  base.py  kokoro_engine.py  minimax_engine.py  qwen_engine.py
db/: __init__.py  get_db.py  jobs.py  schema.py  seed_data.py  voices.py
ephergent_voices/: a1.txt  baron.txt  clive.txt  glitch.txt  kai.txt  lumina.txt  meatball.txt  nano.txt  nocturne.txt  pixel.txt
jobs/: __init__.py  models.py  queue.py  tasks.py
mcp/: server.py
scripts/: install.sh  install_ephergent_voices.py
sprecher/: __init__.py
static/css/: style.css
tests/: conftest.py  requirements.txt
tests/test_api/: conftest.py  test_narrate.py  test_stt.py  test_tts.py  test_voices.py
tests/test_core/: test_kokoro_engine.py  test_narrate.py  test_qwen_engine.py  test_whisper_engine.py
tests/test_db/: conftest.py  test_jobs.py  test_voices.py
tests/test_web/: conftest.py  test_pages.py
web/: router.py
web/static/css/: style.css
web/static/js/: toast.js
web/templates/: base.html  dashboard.html  job_detail.html  jobs.html  narrate.html  storage.html  stt.html  tts.html  voice_add.html  voices.html
